--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
+body {
+    font-family: 'Roboto', sans-serif;;
+}
+
 /* removes default global styles */
 * {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+#logo {
+    font-family: 'Playfair Display', serif;
 }
