--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,13 +27,16 @@ body {
 
 /* Home Page */
 #logo-wrapper {
-    background-color: aquamarine;
+    background-color: black;
+    box-shadow: 2px 0 2px 10px var(--clr-harlequin-green);
     height: 5rem;
-    margin: 20vh 0 4rem;
+    margin: 20vh 0 5rem;
 }
 #logo-homepage {
+    border-radius: 5px;
+    color: var(--clr-burlywood);
     font-family: 'Playfair Display', serif;
-    font-size: 2.4rem;
+    font-size: 2.6rem;
     line-height: 5rem;
     margin: 0 auto;
     position: relative;
