--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,24 @@ body {
     right: .1rem;
 }
 
+/* play button - Home Page */
+#play-button {
+    background-color: var(--clr-sea-green);
+    border-radius: 6px;
+    display: block;
+    font-size: 1.2rem;
+    letter-spacing: .2rem;
+    line-height: 2.1rem;
+    margin: .5rem auto;
+    height: 2.1rem;
+    width: 16rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+#play-button:hover {
+    background-color: #3a956187;
+}
+
 /* navbar - Game Page */
 nav {
     display: flex;
