--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,13 +229,14 @@ progress {
 }
 
 #timer {
+    background-color: #264137;
     border: 2px solid black;
     border-radius: 50%;
     font-size: 1.7rem;
-    line-height: 2.5rem;
+    line-height: 2.6rem;
     text-align: center;
-    height: 2.5rem;
-    width: 2.5rem;
+    height: 2.6rem;
+    width: 2.6rem;
     position: absolute;
     right: 8%;
     top: .5rem;
