Change height of game area keept its content to center at screen  min-width: 600px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,3 +266,11 @@ progress {
     background-color: var(--clr-sea-green);
     border: 1px solid var(--clr-burlywood);
 }
+
+/* MEDIA QUERIES */
+@media (min-width: 600px) {
+    #game-area {
+        min-height: 50rem;
+        justify-content: center;
+    }
+}
