--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ progress {
     min-height: 3rem;
     max-height: 5rem;
     width: 80%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #money-list {
