Add utility class to hide an element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@
     pointer-events: none;
 }
 
+.hide {
+    display: none;
+}
+
 /* removes default global styles */
 * { 
     color: var(--clr-snow);
