Change class name of lifeline icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ progress {
     background-color: rgb(224, 229, 220);
 }
 
-.fas {
+.lifeline-icon {
     color: var(--clr-sea-green);
     font-size: 2.3rem;
     margin: .6rem 0;
