Increase width of answer buttons and font-size of texts at screen min-width: 600px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,14 @@ progress {
         font-size: 1.6rem;
     }
 
+    #answers-container {
+        width: 31.875rem;
+    }
+    
+    .answer-button {
+        font-size: 1.4rem;
+        min-height: 3.8rem;
+    }
 
 }
 
