--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ progress {
 
 
 /* HOW TO PLAY SECTION (Popup) */
-#how-to-play-container {
+#howtoplay-container {
     background-color: var(--clr-raisin-black);
     border: 1px solid white;
     box-sizing: border-box;
@@ -350,14 +350,14 @@ progress {
 }
 
 /* subheading - How to Play */
-#how-to-play-container h3 {
+#howtoplay-container h3 {
     text-align: center;
     font-size: 1.3rem;
     margin: 1.5rem 0 .8rem;
 }
 
 /* bullet points - How to Play */
-#how-to-play-container li {
+#howtoplay-container li {
     list-style: disc;
     list-style-position: inside;
     margin: .5rem 0;
