--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,30 @@ progress {
     width: 15rem;
 }
 
+/* COUNTDOWN TO START [Lightbox] */
+#countdown-outer-wrapper {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+#countdown-inner-wrapper {
+    background-color: rgba(18, 47, 10, 0.803);
+    border-radius: 50%;
+    width: 15rem;
+    height: 15rem;
+}
+#countdown {
+    color: #e2dca1;
+    display: block;
+    font-size: 10rem;
+    text-align: center;
+    line-height: 15rem;
+}
+
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
     /* Game Page */
