--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@
     display: none;
 }
 
+.invisible {
+    visibility: hidden;
+}
+
 .current-prize {
     background-color: rgb(77, 186, 77);
     border-radius: 10px;
@@ -83,6 +87,7 @@ body {
 /* play button - Home Page */
 #play-button {
     background-color: var(--clr-sea-green);
+    border: none;
     border-radius: 6px;
     display: block;
     font-size: 1.2rem;
@@ -93,10 +98,6 @@ body {
     width: 16rem;
     text-align: center;
     text-transform: uppercase;
-}
-
-#play-button:hover {
-    background-color: #3a956187;
 }
 
 /* how to play button - Home Page */
@@ -114,9 +115,64 @@ body {
     text-transform: uppercase;
 }
 
-#howtoplay-btn-homepage:hover {
+#howtoplay-btn-homepage:hover,
+#play-button:hover {
     background-color: #3a956187;
     cursor: pointer;
+}
+
+/* ENTER NAME [Lightbox] */
+#username-outer-wrapper {
+    background-color: #2e3431a3;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#username-inner-wrapper {
+    background-color: var(--clr-raisin-black);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 2rem;
+    width: 80%;
+    min-height: 50vh;
+    padding: 1rem;
+    text-align: center;
+    position: relative;
+}
+
+#username-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+}
+
+#username {
+    box-sizing: border-box;
+    color: black;
+    font-size: 1.1rem;
+    width: 12rem;
+    height: 2rem;
+    padding: .5rem 1rem;
+    text-align: center;
+}
+
+#username-btn {
+    background-color: var(--clr-sea-green);
+    border: none;
+    border-radius: 6px;
+    color: black;
+    font-size: 1rem;
+    width: 9rem;
+    height: 1.8rem;
 }
 
 /* GAME PAGE */
@@ -450,7 +506,7 @@ progress {
 }
 
 #gameover-inner-wrapper button,
-#gameover-inner-wrapper a {      /* play & home buttons - Game Over */
+#gameover-inner-wrapper a {      /* buttons - Game Over */
     background-color: #092c18;
     border-radius: 10px;
     border: none;
@@ -512,7 +568,7 @@ progress {
 }
 
 #gamewon-inner-wrapper button,
-#gamewon-inner-wrapper a {       /* play & home buttons - Game Over */
+#gamewon-inner-wrapper a {       /* buttons - Game Over */
     background-color: #092c18;
     border-radius: 10px;
     border: none;
